--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ packages = [{include = "israel_mock_data_generator"}]
 python = "^3.8"
 faker = "^20.1.0"
 click = "^8.1.7"
+pytest = "^7.4.3"
+botocore = "^1.33.13"
+dataflows = "^0.4.5"
 
 [build-system]
 requires = ["poetry-core"]
