--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ pillow = "^10.2.0"
 pdfminer = "^20191125"
 playwright = "^1.41.2"
 jupyterlab = "^4.1.2"
+jinja2 = "^3.1.3"
+watchdog = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core"]
